--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -7,7 +7,7 @@
 <body>
     <div id="navbar">
         <a href="{{ url_for('homepage') }}">Home</a>
-        <a href="{{ url_for('qalist') }}">Q&A List</a>
+        <a href="{{ url_for('qa_list') }}">Q&A List</a>
         <a href="{{ url_for('interactive') }}">Interactive</a>
     </div>
 </body>
