--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,12 +3,35 @@
   justify-content: center; 
   align-items: center; 
   height: 200px; 
-  background-image: url('/static/cord_banner.jpeg');
+  background-image: url('/static/cord_banner.jpeg'); 
   background-size: cover; 
   background-position: center; 
-  color: black; 
+  color: #DDE6ED; 
   font-size: 2em; 
+  position: relative;
 }
-#h2 {
-text-align: center;
+
+#heading:before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(39, 55, 77, 0.7); 
+  border-radius: 8px; 
 }
+
+#heading * {
+  position: relative;
+  z-index: 1;
+}
+
+h2 {
+  text-align: center;
+  color: #526D82; 
+  border-bottom: 2px solid #9DB2BF; 
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+}
+
