--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -1,18 +1,51 @@
 #navbar {
     overflow: hidden;
-    background-color: #333;
+    background-color: #27374D; /* Dark Blue */
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 #navbar a {
     float: left;
     display: block;
-    color: white;
+    color: #DDE6ED; /* Light Blue */
     text-align: center;
     padding: 14px 20px;
     text-decoration: none;
+    transition: background-color 0.3s; /* Smooth transition for hover effect */
 }
 
 #navbar a:hover {
-    background-color: #ddd;
-    color: black;
+    background-color: #9DB2BF; /* Medium Blue */
+    color: #27374D; /* Dark Blue, for contrast against hover background */
+}
+
+/* Add a class for the current/active page link */
+#navbar a.active {
+    background-color: #526D82; /* Deeper Blue */
+    color: white;
+}
+
+/* Optional: Responsive hamburger menu icon */
+#navbar .icon {
+    display: none;
+}
+
+@media screen and (max-width: 600px) {
+    #navbar a:not(:first-child) {display: none;}
+    #navbar a.icon {
+        float: right;
+        display: block;
+        color: #DDE6ED; /* Light Blue */
+    }
+    #navbar.responsive {position: relative;}
+    #navbar.responsive .icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+    #navbar.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
 }
