--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -12,6 +12,6 @@
     <div id= "h2">
     <h2>About the Dataset</h2>
     </div>
-    <p>Unravel the complexities of COVID-19 through the lens of global research. The CORD-19 dataset is a rich repository of scientific insights on the pandemic, designed to foster innovation and inform the path forward.</p>
+    <p>In the wake of the COVID-19 pandemic, a collaboration spearheaded by the White House alongside premier research institutions has given rise to the COVID-19 Open Research Dataset (CORD-19). This invaluable dataset aggregates over a million scholarly articles, with more than 400,000 featuring full texts, dedicated to COVID-19, SARS-CoV-2, and associated coronaviruses. Designed to be freely accessible, CORD-19 aims to empower the international research community by leveraging cutting-edge artificial intelligence, including natural language processing, to unearth novel insights that support the battle against this infectious disease. The imperative for such innovative tools has never been more critical, given the swift proliferation of coronavirus-related research that challenges the medical research community's capacity to stay abreast of new developments.</p>
   </body>
 </html>
